# proto-wasm-plugins

./: .gitignore  .prototools  Cargo.toml  README.md
.github/: release-drafter.yml
.github/workflows/: release.yml
crates/npm-registry-api/: Cargo.toml
crates/npm-registry-api/src/: lib.rs  schema.rs
crates/vite-plus/: Cargo.toml
crates/vite-plus/src/: archive.rs  lib.rs  proto.rs
crates/wrangler/: Cargo.toml
crates/wrangler/src/: lib.rs  proto.rs  script.rs  shims.rs
src/: lib.rs  proto.rs  scheme.rs  shims.rs
tests/: download_test.rs  register_test.rs  shims_test.rs  versions_test.rs
