[package]
name = "wrangler_tool"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"

[dependencies]
extism-pdk = "1.4.1"
proto_pdk = "0.32"
serde = { version = "1.0.228", features = ["derive"] }
starbase_utils = { version = "0.12", default-features = false }
toml = "1.0"
