[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
extism-pdk = "1.4.1"
proto_pdk = "0.32"
serde = { version = "1.0.228", features = ["derive"] }
starbase_utils = { version = "0.12", default-features = false }
toml = "1.0"
npm-registry-api = { path = "crates/npm-registry-api" }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
