[package]
name = "wrangler_tool"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = { workspace = true }
proto_pdk = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true }
toml = { workspace = true }
npm-registry-api = { workspace = true }
